2017-11-08  Helmut Eller  <eller.helmut@gmail.com>

	* LispPackage.java (KeywordNamespace): Set
	Keyword.keywordNamespace as the exported namespace, analogous to
	EmptyNamespace and KAWA package.
	(createSymbol): New helper.
	(makeUninternedSymbol): Deleted.

2017-11-07  Helmut Eller  <eller.helmut@gmail.com>

	* LispPackage.java (makeUninternedSymbol): New helper that ensures
	that we create SimpleSymbols resp. Keywords for the KAWA
	resp. KEYWORD package. (lookup): Fix a bug. The previous code
	would go into an endless recursion when it had to search inherited
	symbols. (keywordp, symbolPackage, intern, findPackage): New. Java
	part of the implementation for the corresponding CL functions.
	LispPackage seemed like the right place for this code.

2017-09-27  Per Bothner  <per@bothner.com>

	* LangObjType.java (getConstructor): Add parameter type for regex.
	This lets '(regex "foo")' work.

2017-09-24  Per Bothner  <per@bothner.com>

	* LangPrimType.java: Implement new interface HasOwningField.
	This lets use compile code referencing 'boolean' at runtime.

2017-08-23  Per Bothner  <per@bothner.com>

	* LispReader.java (isTerminatingChar): New protected method.
	(readToken): Use isTerminatingChar.

2017-07-20  Per Bothner  <per@bothner.com>

	* LangObjType.java (coercioMethod): Make more robust.

2017-06-13  Per Bothner  <per@bothner.com>

	* ReaderExtendedLiteral.java (readContent): Use LispReader.eofError.
	This throws an exception, which is what the JLine code expects.
	Thus multi-line literals are handled.

2017-06-08  Per Bothner  <per@bothner.com>

	* LispReader.java (readObject): Always wrap top-level in begin.
	(makePair, setCar): New methods, to set end-position, too.
	* ReaderParens.java: Also record end-positions.

2017-05-23  Per Bothner  <per@bothner.com>

	* ReaderXmlElement.java (readElementConstructor): Better error recovery.
	Skip past malformed or unquoted atribute values.

2017-05-03  Per Bothner  <per@bothner.com>
