@@ -744,7 +744,7 @@ SCRIPTS_TO_RUN = case-warnings.scm uninit1.scm \
   command1.scm command2.scm command3.scm exit1.scm exit2.scm lib-cycle.scm \
   lib-square.scm lib-squaref.scm lib-impsrc1.scm lib-impsrc2.scm lib-dup.scm \
   lib-colon1.scm lib-colon2.scm lib-export.scm lib-receive.scm lib-bracket.scm \
-  lib-tailcalls.scm nesting-1.scm \
+  lib-tailcalls.scm nesting-1.scm array1.scm \
   macros1.scm macros2.scm macros3.scm exception1.scm exception2.scm  \
   sva34005.scm sva35362.scm sva36039.scm sva36413.scm sva36556.scm \
   sva36853.scm sva36863.scm sva36917.scm sva37684.scm sva38026.scm \
